--- a/codemarkfrontend/src/components/Signup.css
+++ b/codemarkfrontend/src/components/Signup.css
@@ -2,8 +2,8 @@
     font-family: cursive;
     display: flex;
     justify-content: center;
-    align-items: center;
     max-height: 100vh;
+    margin-top: 20px;
 }
 .signup-side{
     flex-basis: 50%;
@@ -39,17 +39,17 @@
 .signup label,#signup-semester{
     color: rgb(104, 85, 224);
     display: block;
-    margin-top: 6px;
+    margin-top: 4px;
     margin-bottom: 6px; 
 }
-.signup input,#signup-semester{
+.signup input:not(.signup-radio),#signup-semester{
     outline: none;
     appearance: none;
     display: block;
     width: 25rem;
     height: 2rem;
     margin-top: 2px;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     border: 1px solid #908E9B;
     border-radius: 0.5rem;
     text-indent: 1rem;
@@ -83,6 +83,30 @@
     background-color: white;
     border: 1px solid white;
 }
+.signup-radio {
+    appearance:none;
+    outline: none;
+    display: none;
+}
+.signup-radio-label {
+    cursor: pointer;
+    background-color: rgb(230,230,230,0.4);
+    border-radius: 10px;
+    padding: 10px;
+    display:inline;
+    color:#8739F9;
+
+}
+.signup-radio:checked+.signup-radio-label{
+    background-color: #8739F9 !important;
+    color: white;
+}
+.signup-radiodiv{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    /* gap: 30px; */
+}
 
 @media screen and (max-width: 768px) {
     .signup-img{
@@ -102,7 +126,7 @@
     }
 }
 @media screen and (max-width: 425px) {
-    .signup input{
+    .signup input:not(.signup-radio){
         width: 17rem;
     }
     .signup button{
@@ -110,5 +134,9 @@
     }
     #signup-semester{
         width:17rem;
+    }
+    .signup-radiodiv{
+        width: 17rem;
+        gap: 10px;
     }
 }
