Add Additional features and fix bugs

--- a/codemarkfrontend/src/components/Assignmentpage.css
+++ b/codemarkfrontend/src/components/Assignmentpage.css
@@ -207,3 +207,18 @@
         width: 80vw;
     }
 }
+.hover-class{
+    display: none;
+    position: absolute;
+    top: -45px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: darkgreen;
+    color: antiquewhite;
+}
+#assign-code{
+    position: relative;
+}
+#assign-code:hover .hover-class{
+    display: block;
+}
